add RUD operations
